--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.8",
+    "axios": "^0.25.0",
+    "chart.js": "^3.7.0",
+    "coingecko-api": "^1.0.10",
     "core-js": "^3.6.5",
+    "d3-format": "^3.1.0",
+    "postcss": "^7.0.39",
+    "randomcolor": "^0.6.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue": "^3.0.0",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^4.0.0-0",
+    "vue-spinner": "^1.0.4",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
